Second Major Update
First , adding the conpatibility for mobile devices, adding  more ui with standard, fix all buttons , add hide/show password button

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,24 +10,69 @@
       <p>Please login to see this page.</p>
     {% endif %}
   {% endif %}
-    <div class="min-h-screen flex items-start justify-center mt-40">
-    <div class="w-sm h-sm bg-white border border-[#899ea9] text-[#334155] p-6 rounded-2xl shadow-lg">
-    <h2 class="text-2xl font-semibold text-center mb-4">Login</h2>
+    <div class="min-h-screen flex items-start justify-center mt-40 font-primary">
+    <div class="w-sm h-sm bg-white border-white rounded-[12px] p-6">
+    <h2 class="text-2xl text-atb-g-900 font-semibold text-center mb-3">Login</h2>
         <form method="post" action="{% url 'accounts:login' %}">
             {% csrf_token %}
             
-            <label for="username" class="block mb-1">Username</label>
-            <input type="text" id="username" name="username" class="w-full p-2 mb-4 rounded bg-[#f1f5f9] text-black border border-[#899ea9]">
+            <label for="username" class="block text-atb-g-700 mb-3">Username</label>
+            <input type="text" placeholder="Write your username" id="username" name="username" class="w-full p-2 mb-4 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200">
 
-            <label for="pwd" class="block mb-1">Password</label>
-            <input type="password" id="pwd" name="password" class="w-full p-2 mb-4 rounded bg-[#f1f5f9] text-black border border-[#899ea9]">
+            <div class="relative w-full mb-4">
+              <label for="pwd" class="block text-atb-g-700 mb-3">Password</label>
+              <input type="password" id="pwd" name="password" placeholder="Write your password" class="w-full p-2 pr-10 rounded-[8px] bg-white text-[16px] text-atb-g-500 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200"/>
 
+              <button type="button" aria-label="Toggle password visibility" class="absolute inset-y-4.5 right-2 flex items-center justify-center h-full px-2 text-atb-g-500 hover:text-atb-g-900 focus:outline-none"onclick="togglePasswordVisibility()">
+
+
+                <svg id="eyeOpenIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6">
+                  <path stroke-linecap="round" 
+                        stroke-linejoin="round" 
+                        d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                  <path stroke-linecap="round" 
+                        stroke-linejoin="round" 
+                        d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                
+                </svg>
+
+
+
+                <svg id="eyeClosedIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6 hidden">
+                  <path stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />
+
+                </svg>
+
+
+              </button>
+
+            </div>
             <input type="hidden" name="next" value="{{ next }}">
-            <br><br>
-            <input type="submit" value="Login" class="bg-[#BF1E2E] hover:bg-[#9c1b28] text-white py-2 px-4 rounded cursor-pointer" required>
+            <br>
+            <input type="submit" value="Login" class="bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer" required>
         </form> 
     </div>
     </div>
 
+
+<script>
+    function togglePasswordVisibility() {
+        const pwdInput  = document.getElementById('pwd');
+        const eyeOpen   = document.getElementById('eyeOpenIcon');
+        const eyeClosed = document.getElementById('eyeClosedIcon');
+
+        if (pwdInput.type === 'password') {
+            pwdInput.type = 'text';
+            eyeOpen.classList.add('hidden');
+            eyeClosed.classList.remove('hidden');
+        } else {
+            pwdInput.type = 'password';
+            eyeOpen.classList.remove('hidden');
+            eyeClosed.classList.add('hidden');
+        }
+      }
+</script>
 {% endblock %}
 
