--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,26 +1,24 @@
 {% extends "base.html" %}
 
-
 {% block content %}
 
-
-<div class="min-h-screen flex flex-col px-32 py-24 gap-8 font-primary">
+<div class="min-h-screen flex flex-col bg-atb-g-50 text-left py-24 px-4 md:px-12 lg:px-32  font-primary">
 
     <div class="flex flex-col gap-2">
         <h2 class="text-[30px]  font-[600] text-atb-g-900 font-primary">Profile</h2>
-        <p class="text-[16px] text-atb-g-600">test test test testing a test for a test, the test is here.</p>
+        <p class="text-[16px] text-atb-g-600">View your personal info, borrow requests, return requests and  devices.</p>
     </div>
 
-    <hr class="border-atb-g-200">
+    <hr class="border-atb-g-200 mt-6">
 
 
 
-    <div class="w-full flex flex-row p-6 gap-8">
+    <div class="w-full flex flex-col items-start  md:flex-row p-4 md:p-6 gap-6 md:gap-8">
 
         
 
         <!-- Tabs -->
-        <div class="flex flex-col gap-4 p-12 bg-white border border-white rounded-[12px] h-fit w-1/4">
+        <div class="flex flex-col flex-wrap  gap-4 p-4 sm:p-6 md:p-6 lg:p-12 bg-white border border-white rounded-[12px] w-full md:w-1/3">
             <button id="user-tab"
                 class="tab-button px-12 py-2 text-[18px] font-semibold rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
            hover:bg-atb-g-50 hover:text-atb-g-800 
@@ -58,7 +56,7 @@
 
 
         <!-- User Info -->
-        <div id="user-section" class="tab-section border border-white bg-white rounded-[12px] p-12 w-3/4">
+        <div id="user-section" class="tab-section w-full md:min-h-110 md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12">
         <p>
             <span class="text-atb-g-700 font-semibold">Username:</span><br>
             <span class="text-atb-g-500 pl-4">{{ user.username }}</span><br>
@@ -80,32 +78,50 @@
 
 
         <!-- Borrow Section -->
-        <div id="borrow-section" class="tab-section border border-white bg-white rounded-[12px] p-12 w-3/4 hidden">
-            <h3 class="text-2xl font-semibold mb-4">Your Borrow Request History :</h3> 
+        <div id="borrow-section" class="tab-section md:w-2/3 md:min-h-110 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12 hidden">
+            <h3 class="text-2xl font-semibold mb-4">Your Borrow Request History :</h3>
+            <div class="flex flex-col space-y-4">
             {% for req in borrows %}
-            <a href="#"  class="block bg-atb-g-50 rounded-[12px] p-8 ">
-                <h3 class="text-xl font-semibold text-[#334155]">{{ req }}</h3>
-                <p class="text-[#475569]">
-                    Borrowed on {{ req.date_requested }} &bull; Return by {{ req.return_date }}
-                </p>
+            <a href="#"  class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8">
                 <div class="flex justify-start mt-2">
                     {% if req.approved %}
-                    <span class="inline-block px-3 py-1 text-sm font-semibold text-green-800 bg-green-200 rounded-lg">Approved</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                        <!--
+                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-s-500 bg-atb-s-200 rounded-lg">
+                            Approved
+                        </span>
+                        -->
                     {% else %}
-                    <span class="inline-block px-3 py-1 text-sm font-semibold text-yellow-800 bg-yellow-200 rounded-lg">Verifying</span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                        <!--
+                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-w-500 bg-atb-w-200 rounded-lg">
+                            Verifying
+                        </span>
+                        -->
                     {% endif %}
+                    </div>
+                    <div class="text-left">
+                    <h3 class="text-xl font-semibold text-[#334155]">{{ req }}</h3>
+                    <p class="text-[#475569]">Requested at {{ req.date_requested }} &bull; Returning on {{ req.return_date }}</p>
                 </div>
             </a>
             {% empty %}
             <p class="text-atb-g-500">You haven't requested any borrows yet.</p>
             {% endfor %}
+            </div>
         </div>
 
 
 
         <!-- Device Section -->
-        <div id="device-section" class="tab-section border border-white bg-white rounded-[12px] p-12 w-3/4 hidden">
+        <div id="device-section" class="tab-section w-full md:min-h-110 md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12 hidden">
             <h3 class="text-2xl font-semibold mb-4">Your borrowed devices:</h3>
+            <div class="flex flex-col space-y-4">
             {% for instance in approves %}
             <a href="{% url 'devices:device-detail' instance.device.id %}" class="block bg-atb-g-50 rounded-[12px] p-8 hover:bg-atb-g-200 focus:border-none focus:ring-0 focus:shadow-[0_0_0_4px_#F2F4F7] transition duration-300">
                 <h3 class="text-xl font-semibold text-[#334155]">{{ instance.device.name }}</h3>
@@ -116,30 +132,48 @@
             {% empty %}
             <p class="text-atb-g-500">You don't have any devices yet.</p>
             {% endfor %}
+            </div>
         </div>
 
 
 
         <!-- Return Section -->
-        <div id="return-section" class="tab-section border border-white bg-white rounded-[12px] p-12 w-3/4 hidden">
+        <div id="return-section" class="tab-section w-full md:min-h-110 md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12 hidden">
             <h3 class="text-2xl font-semibold mb-4">Your Return Request History :</h3> 
+            <div class="flex flex-col space-y-4">
             {% for req in returns %}
-            <a href="#" class="block bg-atb-g-50 rounded-[12px] p-8 ">
-                <h3 class="text-xl font-semibold text-[#334155]">{{ req }}</h3>
-                <p class="text-[#475569]">
-                    Condition: {{ req.condition }} &bull; Feedback: {{ req.feedback|slice:":20" }}
-                </p>
+            <a href="#" class="block bg-atb-g-50 rounded-[12px] p-8 flex flex-row items-center gap-8 ">
                 <div class="flex justify-start mt-2">
                     {% if req.approved %}
-                    <span class="inline-block px-3 py-1 text-sm font-semibold text-green-800 bg-green-200 rounded-lg">Approved</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-s-500">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                        <!--
+                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-s-500 bg-atb-s-200 rounded-lg">
+                            Approved
+                        </span>
+                        -->
                     {% else %}
-                    <span class="inline-block px-3 py-1 text-sm font-semibold text-yellow-800 bg-yellow-200 rounded-lg">Verifying</span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-16 text-atb-w-500">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                        <!--
+                        <span class="inline-block px-3 py-1 text-sm font-semibold text-atb-w-500 bg-atb-w-200 rounded-lg">
+                            Verifying
+                        </span>
+                        -->
                     {% endif %}
+                </div>
+                <div>
+                <h3 class="text-xl font-semibold text-[#334155]">{{ req }}</h3>
+                <p class="text-[#475569]">Condition : {{ req.condition }} &bull; Feedback : {{ req.feedback|slice:":20" }}</p>
                 </div>
             </a>
             {% empty %}
             <p class="text-atb-g-500">You haven't requested any returns yet.</p>
             {% endfor %}
+            </div>
         </div>
     </div>
 </div>
