--- a/devices/templates/devices/device_list.html
+++ b/devices/templates/devices/device_list.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="min-h-screen flex flex-col bg-atb-g-50 text-left py-24 px-32 gap-8 font-primary">
+
+<div class="min-h-screen flex flex-col bg-atb-g-50 text-left py-24 px-4 md:px-12 lg:px-32 font-primary">
+
+
     <div class="flex flex-col gap-2">
         <h2 class="text-[30px]  font-[600] text-atb-g-900 font-primary">Device List</h2>
-        <p class="text-[16px] text-atb-g-600">test test test testing a test for a test, the test is here.</p>
+        <p class="text-[16px] text-atb-g-600">Choose from the list of devices what you need to borrow.</p>
     </div>
 
     <hr class="border-atb-g-200">
-    <div class="w-full flex flex-row p-6 gap-8">
+    
+    <div class="w-full flex flex-col items-start  md:flex-row p-4 md:p-6 gap-6 md:gap-8">
+
         <!-- Tabs -->
 
-        <div class="flex flex-col gap-4 p-12 bg-white border border-white rounded-[12px] h-fit w-1/4">
+        <div class="flex flex-col gap-4 p-4 sm:p-6 md:p-8 lg:p-12 bg-white border border-white rounded-[12px] w-full md:w-1/3">
+
             <button 
                 class="px-12 py-2 text-[18px] font-semibold rounded-[8px] transition-colors duration-200 border-[1px] border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
            hover:bg-atb-g-50 hover:text-atb-g-800 
@@ -34,7 +40,9 @@
             {% endfor %}
         </div>
 
-        <div class="w-3/4 border border-white bg-white rounded-[12px] p-12">
+        
+        <div class="w-full md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12">
+
 
 
             {% if object_list %}
