--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 		{% tailwind_css %}
     </head>
-    <body class="bg-atb-g-50 bg-no-repeat bg-cover min-h-screen" >
+    <body class="bg-atb-g-50 min-h-screen w-full" >
         {% include 'nav-bar.html'%}
         
         <div class="fixed top-25 left-1/2 transform -translate-x-1/2 w-96 z-50" id="flash-messages">
@@ -20,13 +20,13 @@
                 flash-message
                 px-4 py-2 rounded shadow mb-2
                 {% if message.tags == 'error' %}
-                  bg-red-100 text-red-800 border border-red-300
+                  bg-atb-e-100 text-atb-e-500 border border-atb-e-300
                 {% elif message.tags == 'success' %}
-                  bg-green-100 text-green-800 border border-green-300
+                  bg-atb-s-100 text-atb-s-500 border border-atb-s-300
                 {% elif message.tags == 'warning' %}
-                  bg-yellow-100 text-yellow-800 border border-yellow-300
+                  bg-atb-w-100 text-atb-w-500 border border-atb-w-300
                 {% else %}
-                  bg-blue-100 text-blue-800 border border-blue-300
+                  bg-atb-g-100 text-atb-g-500 border border-atb-g-300
                 {% endif %}
               ">
                 {{ message }}
