--- a/devices/templates/devices/device_list.html
+++ b/devices/templates/devices/device_list.html
@@ -10,7 +10,7 @@
         <p class="text-[16px] text-atb-g-600">Choose from the list of devices what you need to borrow.</p>
     </div>
 
-    <hr class="border-atb-g-200">
+    <hr class="border-atb-g-200 mt-6">
     
     <div class="w-full flex flex-col items-start  md:flex-row p-4 md:p-6 gap-6 md:gap-8">
 
