--- a/main/templates/main/dashboard.html
+++ b/main/templates/main/dashboard.html
@@ -49,8 +49,8 @@
             </div>
 
             <div class="md:col-span-2 p-6 md:p-12 bg-white rounded-[12px]">
-                <h2 class="text-lg font-semibold text-gray-800 mb-4">Top Active Users</h2>
-                <div class="p-4 h-fit border">
+                <h2 class="text-lg font-semibold text-gray-800 mb-4">Top Requesting Users</h2>
+                <div class="p-4 h-fit">
                     <canvas id="UserChart" class="w-full max-h-80"></canvas>
                 </div>
             </div>
