--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -45,11 +45,11 @@
     --color-atb-w-500: #F79009;
 
     /* Success */
-    --color-atb-s-50:  #FEF0C7;
-    --color-atb-s-100: #FEDF89;
-    --color-atb-s-200: #FEC84B;
-    --color-atb-s-300: #FDB022;
-    --color-atb-s-400: #F79009;
+    --color-atb-s-50:  #ECFDF3;
+    --color-atb-s-100: #D1FADF;
+    --color-atb-s-200: #A6F4C5;
+    --color-atb-s-300: #6CE9A6;
+    --color-atb-s-400: #32D583;
     --color-atb-s-500: #12B76A;
 }
 /**
